--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dot-rest",
-  "version": "0.2.5",
+  "version": "0.3.2",
   "description": "a minimalist toolkit for building scalable, fault tolerant and eventually-consistent microservices",
   "keywords": [
     "microservice",
@@ -32,15 +32,16 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "clerq": "^0.4.1",
     "eslint": "^6.2.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "redis-mock": "^0.46.0"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "body": "^5.1.0",
-    "clerq": "^0.2.5",
     "find-my-way": "^2.1.0",
     "is_js": "^0.9.0",
     "pino": "^5.13.2",
